--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "zendframework/zendframework": ">2.1.3",
         "doctrine/doctrine-orm-module": "0.7.*",
         "zendframework/zend-developer-tools": "dev-master",
-        "doctrine/migrations": "dev-master"
+        "doctrine/migrations": "dev-master",
+        "zf-commons/zfc-base": "0.1.1",
+        "zf-commons/zfc-user": "dev-master"
     }
 }
